fix: ui mobile WhoWeAre component
fix: ui mobile WhoWeAre component

--- a/src/Components/WhoWeAre/WhoWeAre.module.css
+++ b/src/Components/WhoWeAre/WhoWeAre.module.css
@@ -121,7 +121,7 @@
 
 @media only screen and (max-width: 480px) {
   .MainContainer {
-    height: 350px;
+    height: auto;
   }
   .Rectangulo {
     display: none;
